# contact-book

./: .bandit.yml  .gitignore  README.md  __init__.py  app.py  check.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: __init__.py  config.py  init_db.py  run.py
src/CLI/: __init__.py  main.py
src/UI/: __init__.py  add_contact.py  edit_contact.py  home.py  router.py  show_contact.py
src/crud/: __init__.py  contacts.py
src/database/: __init__.py  db.py  init.py  models.py  seed.py
src/services/: __init_.py  contact_service.py
src/styles/: main.css
src/ui/: edit_contact.py  home.py  router.py  show_contact.py
src/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py  pytest.ini
tests/integration/: test_integration.py
tests/unit/CLI/: test_main.py
tests/unit/crud/: test_contacts.py
tests/unit/database/: test_db.py  test_models.py  test_seed.py
tests/unit/services/: test_contact_service.py
tests/unit/utils/: test_validation.py
