[project]
name = "contact-book"
version = "0.1.0"


# ==================== pylint ====================
#[tool.pylint.MAIN]
[tool.pylint.MASTER]

# It will add src to pylint pathon path
init-hook = """
import sys
from pathlib import Path
project_root = Path(__file__).resolve().parent
sys.path.insert(0, str(project_root))
sys.path.insert(0, str(project_root / 'src'))
"""

[tool.pylint.'FORMAT']
good-names = ["SessionLocal"]
max-line-length = 88

[tool.pylint.MESSAGES_CONTROL]
disable = ["too-few-public-methods", "import-error"]

[tool.pylint.TYPECHECK]
generated-members = ["src.*", "tests.*"]

# ==================== MYPY  ====================
[tool.mypy]
ignore_missing_imports = true

# ==================== Pytest ====================
[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-v --tb=short"
