[project]
name = "contact-book"
version = "1.0.0"


# ==================== pylint ====================
[tool.pylint.MASTER]

# It will add src to pylint pathon path
init-hook='import sys; sys.path.append("src")'

[tool.pylint.'FORMAT']
good-names = ["SessionLocal", "CLI"]
max-line-length = 88

[tool.pylint.MESSAGES_CONTROL]
disable = ["too-few-public-methods", "import-error"]

[tool.pylint.TYPECHECK]
generated-members = ["src.*", "tests.*"]

# ==================== MYPY  ====================
[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true 

# ==================== Pytest ====================
[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-v --tb=short"
